# RadonFramework

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Debug.vgdbsettings.template  Install.txt  Integrate.cmake  LICENSE  README.md  appveyor.yml  index.html  libRadonFramework.cmake  libRadonFramework_VGDB.cmake  params.json  radonframework.kon
backend/Glew/: glew.c
backend/Linux/: LinuxProcessService.cpp  LinuxSMBiosService.cpp
backend/MurmurHash/: MurmurHash2_64.cpp  MurmurHashHashfunctionService.cpp
backend/OpenGL/: GraphicDriverInformationOpenGL.cpp  OpenGLCanvas.cpp
backend/Windows/: WindowsProcessService.cpp  WindowsSMBiosService.cpp
backend/Windows/Drawing/: DWMOpenGLCanvas3D.cpp  DWMOpenGLCanvas3DService.cpp  GDIOpenGL1Canvas3D.cpp  GDIOpenGL1Canvas3DService.cpp  GDIOpenGL2Canvas3D.cpp  GDIOpenGL2Canvas3DService.cpp  GDIOpenGL3Canvas3D.cpp  GDIOpenGL3Canvas3DService.cpp  GDIOpenGLCanvas3D.cpp  GDIOpenGLCanvas3DService.cpp  WDMOpenGLCanvas3D.cpp  WDMOpenGLCanvas3DService.cpp  WindowsOpenGLCanvas3D.cpp
backend/Windows/Forms/: WindowsApplication.cpp  WindowsWindow.cpp  WindowsWindowService.cpp
backend/X11/Drawing/: X11OpenGL1Canvas3D.cpp  X11OpenGL1Canvas3DService.cpp  X11OpenGL2Canvas3D.cpp  X11OpenGL2Canvas3DService.cpp  X11OpenGL3Canvas3D.cpp  X11OpenGL3Canvas3DService.cpp
backend/X11/Forms/: X11Application.cpp  X11Window.cpp  X11WindowService.cpp
backend/hashlib++/src/: HashlibHashfunctionService.cpp  hl_md5.cpp  hl_md5wrapper.cpp  hl_sha1.cpp  hl_sha1wrapper.cpp  hl_sha256.cpp  hl_sha256wrapper.cpp  hl_sha2ext.cpp  hl_sha384wrapper.cpp  hl_sha512wrapper.cpp
backend/stringcoders/: arraytoc.c  modp_ascii.c  modp_b16.c  modp_b2.c  modp_b64.c  modp_b85.c  modp_bjavascript.c  modp_burl.c  modp_numtoa.c
cmake/intern/: CompilerAndLinkerSettings.cmake  GCC.cmake  UnixMakefile.cmake  VisualStudio.cmake  XCode.cmake
cmake/util/: CMakeFunctionShortcut.cmake  Macros.cmake  svn.cmake
devdoc/: fonts.graphml  scenegraph.graphml  services.graphml  sound.graphml
doxygen/: CMakeLists.txt  Main.dox  documentation
include/RadonFramework/: Compiler.hpp  Defines.hpp  Defines.hxx  Plugins.hpp  Radon.hpp  RadonInline.hpp  RadonInline.hxx  precompiled.hpp
include/RadonFramework/Collections/: AVLTree.hpp  Array.hpp  ArrayEnumerator.hpp  ArrayEnumeratorType.hpp  AutoVector.hpp  BitArray.hpp  BitSet.hpp  CommandBucket.hpp  DataTree.hpp  Enumerator.hpp  HashList.hpp  HashMap.hpp  Hashtable.hpp  IEnumerable.hpp  IEnumerator.hpp  LinkedEnumerator.hpp  List.hpp  Pair.hpp  Queue.hpp  RingBuffer.hpp  SceneGraph.hpp  Stack.hpp  Tree.hpp
include/RadonFramework/Concurrency/: DynamicQueueMPSC.hpp  TypelessDynamicQueueMPSC.hpp
include/RadonFramework/Converter/: Plugin.h
include/RadonFramework/Core/: DataManagment.hpp  SIMD.hpp
include/RadonFramework/Diagnostics/: Appender.hpp  ProcessingUnits.hpp  ProcessorData.hpp  (+1 more)
src/: BuildInfo.cpp  Radon.cpp  RadonFramework.mpp
src/Algorithm/: BinarySearch.cpp
src/Collections/: HashList.cpp  Hashtable.cpp  RingBuffer.cpp
src/Concurrency/: TypelessDynamicQueueMPSC.cpp
src/Core/: RadonFramework.Core.mpp
src/Drawing/: AbstractRenderer.cpp  BasicRenderFunction.cpp  Camera.cpp  Canvas3D.cpp  Canvas3DService.cpp  Canvas3DServiceConfig.cpp  Canvas3DServiceLocator.cpp  Color.cpp  CommandBuffer.cpp  Draw2D.cpp  FontService.cpp  FontServiceLocator.cpp  GraphicDriverInformation.cpp  Image.cpp  MeshGenerator2D.cpp  NativeShape.cpp  OpenGLMachine.cpp  Path2D.cpp  Path2DTriangulation.cpp  PixelFormat.cpp
src/IO/: AccessMode.cpp  DecoderService.cpp  DecoderServiceLocator.cpp  Directory.cpp  EncoderService.cpp  EncoderServiceLocator.cpp  File.cpp  FileProtocolService.cpp  FileStream.cpp  FileWatcher.cpp  Log.cpp  LogConfig.cpp  LogConsole.cpp  LogDebuggerOutput.cpp  MemoryCollectionStream.cpp  MemoryProtocolService.cpp  MemoryStream.cpp  OptionValue.cpp  Parameter.cpp  ProtocolService.cpp  ProtocolServiceLocator.cpp  Resource.cpp  Settings.cpp  Stream.cpp  Uri.cpp
src/Math/: Float32.cpp  Float64.cpp  Math.cpp  Random.cpp
src/Memory/: DoubleSideStackAllocator.cpp  HeapAllocator.cpp  LinearAllocator.cpp  ManagedInstanceStackAllocator.cpp  MemoryInfo.cpp  PointerID.cpp  PoolAllocator.cpp  ReadBuffer.cpp  StackAllocator.cpp  SystemAllocator.cpp
src/Modules/: RadonFramework.Collections.mpp  RadonFramework.Core.Common.mpp  RadonFramework.Core.Types.mpp  RadonFramework.Core.mpp  RadonFramework.Diagnostics.Test.mpp  RadonFramework.IO.mpp  RadonFramework.Threading.mpp
src/Net/: Client.cpp  ClientPool.cpp  EndPoint.cpp  IPAddress.cpp  IPHostEntry.cpp  PacketStream.cpp  Server.cpp  ServerConfig.cpp  Service.cpp  SessionClient.cpp  SessionServer.cpp  Socket.cpp  SocketError.cpp
src/Reflection/: ParameterStack.cpp  Reflectable.cpp  ReflectionClass.cpp  ReflectionMethode.cpp  ReflectionProperty.cpp
src/Security/: Keychain.cpp
src/System/: CPUID.cpp  CompilerConfig.cpp  CompilerConfig.cxx  DynamicLibrary.cpp  Environment.cpp  EnvironmentLinux.cpp  EnvironmentOSX.cpp  EnvironmentUnix.cpp  EnvironmentWindows.cpp  Hardware.cpp  HardwareCPUID.cpp  HardwareLinux.cpp  HardwareOSX.cpp  HardwareWindows.cpp  Memory.cpp  MemoryCPUSSE.cpp  MemoryCPUStd.cpp  MemoryLinux.cpp  MemoryUnix.cpp  MemoryWindows.cpp  OperatingSystem.cpp  Process.cpp  ProcessUnix.cpp  ProcessWindows.cpp  Processor.cpp  ProcessorWindows.cpp  RadonFramework.System.mpp  Security.cpp  SecurityWindows.cpp  String.cpp  StringLinux.cpp  StringUnix.cpp  StringWindows.cpp  Time.cpp  TimeLinux.cpp  TimeOSX.cpp  TimeUnix.cpp  TimeWindows.cpp
src/Text/: Grammar.cpp  GrammarExpression.cpp  LogicElement.cpp  Regex.cpp  StringBuilder.cpp  Tokenizer.cpp  UnicodeRangeInfo.cpp
src/Threading/: RadonFramework.Threading.mpp  RegisteredWaitHandle.cpp  Scopelock.cpp  Thread.cpp  ThreadPool.cpp  Timer.cpp  WorkBalancer.cpp
src/Time/: DateTime.cpp  Framecounter.cpp  ScopeTimer.cpp  TimeSpan.cpp
src/Util/: UUID.cpp
tests/BDDTest/: CMakeLists.txt
tests/ResourceTest/: CMakeLists.txt
tests/SystemTest/: CMakeLists.txt
tests/UnitTest/: CMakeLists.txt
work/: Radon.rc
(+813 files in other folders)
